--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -5,13 +5,6 @@
   border-top: 1px solid rgba(255,255,255,0.05);
   padding: 6vh 0 12vh;
 }
-.abt-section {
-  position: relative;
-  background-color: var(--bg-color);
-  overflow: hidden;
-  border-top: 1px solid rgba(255,255,255,0.05);
-  padding: 6vh 0 12vh;
-}
 
 .abt-container {
   display: flex;
